www.filebot.net/mobile.css
@media (max-width: 830px) {
	body {
		margin: 0px;
	}

	div.page {
		width: 100%;
		margin: 0px 0px;
		padding: 20px 0px;
		border: unset;
		border-radius: unset;
		box-shadow: unset;
	}

	a.box {
		max-width: 300px;
	}

	div.video {
		width: unset;
		height: unset;
	}

	div.video iframe {
		width: 100%;
		margin: 0px 0px;
		border: unset;
		border-radius: unset;
	}

	div.screenshot {
		margin-left: 20px;
		margin-right: 10px;
	}



	div.section > img.icon, div.section > h2 {
		margin-left: 5px;
	}

	div.section span.quote {
		display: none;
	}

	div.footer p {
		left: unset;
	}

	div.zoom:hover {
		transform: unset !important;
	}

	#purchase > a.paddle_button {
		margin-left: 60px !important;
		margin-right: 30px !important;
	}

	table.reference {
		width: 100%;
		table-layout: fixed;
		font-size: smaller;
		overflow: hidden;
	}

	table.reference > tbody > tr > td {
		padding: 5px 0px 5px 5px;
		white-space: unset;
	}

	table.reference th:nth-child(4), table.reference td:nth-child(4) {
		display: none;
	}

	ul.repository {
		columns: 1;
		width: unset;
	}
}


@media (max-width: 580px) {
	div.screenshot.about, div.screenshot.column {
		float: unset;
		margin: 70px 10px 20px 10px;
		text-align: center;
	}
}

